--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       
       <!-- Portfolio Item -->
       <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(674px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  web  isotope-item">
-        <div class="portfolio_img"> <img style="height:260px;" src="img/portfolio/psga.jpg" alt="Online Public Service Guarantee Act"> </div>
+        <div class="portfolio_img"> <img src="img/portfolio/psga.jpg" alt="Online Public Service Guarantee Act"> </div>
         <div class="item_overlay">
           <div class="item_info"> 
             <h4 class="project_name">Online Public Service Guarantee Act</h4>
