--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  <title>404 - Page not found! &middot; Afaan Bilal &middot; Founder &amp; CEO, AMX Infinity!</title>
+  <title>404 - Page not found! &middot; AMX Infinity!</title>
   <style>
   body { 
 	background:  #2e7bcf url(/images/header-bg.jpg) 0 0 repeat-x; 
