Modified about section

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
       <div class=" col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-right"><img src="img/logo_only_bt.png" style="width: 240px;" class="delay-03s animated wow zoomIn" alt=""></div>
       	<div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-left">
         	<div class=" delay-01s animated fadeInDown wow animated">
-			<h3>We are a private organization, based in Baramulla, Kashmir; providing software and web solutions to both private and government firms.</h3><br/> 
+			<h3><strong>AMX Infinity</strong> is a private organization, based in Baramulla, Kashmir; providing software and web solutions to both private and government firms.</h3><br/> 
             <p>
-                With <strong>AMX Infinity</strong>, since March 2013, we have been creating awesome web applications, softwares, logos and much more for Government, Educational and Private Institutions.
+                With <strong>AMX Infinity</strong>, since March 2011, we have been creating awesome web applications, softwares, logos and much more for Government, Educational and Private Institutions.
                 We specialize in website design, web app development and customized software design for businesses and individuals!
             </p>
         </div>
