--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
           </ul>
         </div>
         <h3 class="wow fadeInDown delay-09s">Shah Amir</h3>
-        <span class="wow fadeInDown delay-09s teamTitle">Cheif Financial Officer</span>
+        <span class="wow fadeInDown delay-09s teamTitle">Chief Financial Officer</span>
         <p class="wow fadeInDown delay-09s">-</p>
       </div>
     </div>
