Amir Photo Update

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
       <div class="team_area">
         <div class="team_box wow fadeInDown delay-09s">
           <div class="team_box_shadow"><a href="javascript:void(0)"></a></div>
-          <img src="img/team_pic2.jpg" style="max-height: 260px;" alt="">
+          <img src="img/ShahAmir.jpg" style="max-height: 260px;" alt="">
           <ul>
             <li><a href="javascript:void(0)" class="fa fa-twitter"></a></li>
             <li><a href="javascript:void(0)" class="fa fa-facebook"></a></li>
