--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         </div>
         <h3 class="wow fadeInDown delay-03s">Afaan Bilal</h3>
         <span class="wow fadeInDown delay-03s teamTitle">Founder, Chief Executive Officer</span>
-        <p class="wow fadeInDown delay-03s">-</p>
+        <p class="wow fadeInDown delay-03s">afaan@amxinfinity.ml</p>
       </div>
       <div class="team_area">
         <div class="team_box  wow fadeInDown delay-06s">
@@ -365,7 +365,7 @@
         </div>
         <h3 class="wow fadeInDown delay-06s">Muqeat Manzoor</h3>
         <span class="wow fadeInDown delay-06s teamTitle">Co-Founder, Chief Marketing Officer</span>
-        <p class="wow fadeInDown delay-06s">-</p>
+        <p class="wow fadeInDown delay-06s">muqeat@amxinfinity.ml</p>
       </div>
       <div class="team_area">
         <div class="team_box wow fadeInDown delay-09s">
@@ -379,8 +379,8 @@
           </ul>
         </div>
         <h3 class="wow fadeInDown delay-09s">Shah Amir</h3>
-        <span class="wow fadeInDown delay-09s teamTitle">Chief Financial Officer</span>
-        <p class="wow fadeInDown delay-09s">-</p>
+        <span class="wow fadeInDown delay-09s teamTitle">Chief Information Officer</span>
+        <p class="wow fadeInDown delay-09s">amir@amxinfinity.ml</p>
       </div>
     </div>
   </div>
@@ -411,7 +411,10 @@
                             </div>
                             <div class="detail">
                                 <h4>Email us at</h4>
-                                <p>support@amxinfinity.ml</p>
+                                <p>
+                                    support@amxinfinity.ml<br>
+                                    info@amxinfinity.ml
+                                </p>
                             </div> 
                         </div>
        		  
