Amir -> Co-Founder:

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
           </ul>
         </div>
         <h3 class="wow fadeInDown delay-09s">Shah Amir</h3>
-        <span class="wow fadeInDown delay-09s teamTitle">Chief Information Officer</span>
+        <span class="wow fadeInDown delay-09s teamTitle">Co-Founder, Chief Information Officer</span>
         <p class="wow fadeInDown delay-09s">amir@amxinfinity.ml</p>
       </div>
     </div>
