ICONS, blog link

--- a/index.html
+++ b/index.html
@@ -413,21 +413,21 @@
                             <div class="detail">
                                 <h4>AMX Infinity</h4>
                                 <p>
-                                    Baramulla, Kashmir<br> 
-                                    193101
+                                    <i class="fa fa-globe"></i>&nbsp; 
+                                    Baramulla, Kashmir
                                 </p>
                             </div>
                             <div class="detail">
                                 <h4>Call us on</h4>
                                 <p>
-                                    +91 9596041824
+                                    <i class="fa fa-phone"></i>&nbsp; +91 9596041824
                                 </p>
                             </div>
                             <div class="detail">
                                 <h4>Email us at</h4>
                                 <p>
-                                    support@amxinfinity.ml<br>
-                                    info@amxinfinity.ml
+                                    <i class="fa fa-envelope"></i>&nbsp; support@amxinfinity.ml<br>
+                                    <i class="fa fa-envelope"></i>&nbsp; info@amxinfinity.ml
                                 </p>
                             </div> 
                         </div>
@@ -435,6 +435,7 @@
 			  
           
           <ul class="social_links">
+            <li class="gplus animated bounceIn wow delay-02s"><a href="https://www.coderevolution.tk"><i class="fa fa-plus-square"></i></a></li>
             <li class="twitter animated bounceIn wow delay-02s"><a href="https://twitter.com/AfaanBilal"><i class="fa fa-twitter"></i></a></li>
             <li class="facebook animated bounceIn wow delay-03s"><a href="https://facebook.com/AMXInfinity"><i class="fa fa-facebook"></i></a></li>
             <li class="pinterest animated bounceIn wow delay-04s"><a href="https://instagram.com/AfaanBilal"><i class="fa fa-instagram"></i></a></li>
