--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 	    <div id="main-nav" class="collapse navbar-collapse navStyle">
 			<ul class="nav navbar-nav" id="mainNav">
 			  <li class="active"><a href="#hero_section" class="scroll-link">Home</a></li>
+			  <li><a href="products.html" class="scroll-link">Products</a></li>
 			  <li><a href="#aboutUs" class="scroll-link">About Us</a></li>
 			  <li><a href="#service" class="scroll-link">Services</a></li>
 			  <li><a href="#Portfolio" class="scroll-link">Portfolio</a></li>
