--- a/products.html
+++ b/products.html
@@ -337,7 +337,7 @@
 <!--Products--> 
 
 <!--Footer-->
-<footer class="footer_wrapper" id="contact">
+<footer class="footer_wrapper">
   <div class="container">
     <div class="footer_bottom"><span>Copyright &copy; <script>document.write(new Date().getFullYear());</script> <a href="https://www.amxinfinity.ml">AMX Infinity</a>. All Rights Reserved.</span> </div>
   </div>
