--- a/products.html
+++ b/products.html
@@ -38,7 +38,7 @@
 			  <li><a href="/#Portfolio" class="scroll-link">Portfolio</a></li>
 			  <li><a href="/#clients" class="scroll-link">Clients</a></li>
 			  <li><a href="/#team" class="scroll-link">Team</a></li>
-			  <li><a href="/index.html#contact" class="scroll-link">Contact</a></li>
+			  <li><a href="/#contact" class="scroll-link">Contact</a></li>
 			</ul>
       </div>
 	 </nav>
