--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 <!--Footer-->
 <footer class="footer_wrapper" id="contact">
   <div class="container">
-    <section class="page_section contact" id="contact">
+    <section class="page_section contact" id="contact2">
       <div class="contact_section">
         <h2>Contact Us</h2>
       </div>
