--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 <div class="client_logos"><!--client_logos-->
   <div class="container">
     <ul class="fadeInRight animated wow">
-      <li><a href="javascript:void(0)"><img src="img/client_logo1.png" alt=""></a></li>
+      <li><a href="javascript:void(0)"><img src="img/clients/jkgovt.png" alt=""></a></li>
       <li><a href="javascript:void(0)"><img src="img/client_logo2.png" alt=""></a></li>
       <li><a href="javascript:void(0)"><img src="img/client_logo3.png" alt=""></a></li>
       <li><a href="javascript:void(0)"><img src="img/client_logo5.png" alt=""></a></li>
