--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 <title>AMX Infinity &middot; Web and Software Solutions</title>
 <link rel="icon" href="favicon.png" type="image/png">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-<link href="css/style.css" rel="stylesheet" type="text/css"> 
-<link href="css/font-awesome.css" rel="stylesheet" type="text/css"> 
-<link href="css/animate.css" rel="stylesheet" type="text/css">
+<link href="css/combined.min.css" rel="stylesheet" type="text/css">
  
 <!--[if lt IE 9]>
     <script src="js/respond-1.1.0.min.js"></script>
