--- a/index.html
+++ b/index.html
@@ -460,10 +460,10 @@
   </div>
 </footer>
 
-<script async type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
-<script async type="text/javascript" src="js/bootstrap.min.js"></script>
-<script async type="text/javascript" src="js/combined.min.js"></script>
-<script async type="text/javascript" src="js/custom.js"></script>
+<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/combined.min.js"></script>
+<script type="text/javascript" src="js/custom.js"></script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
