--- a/products.html
+++ b/products.html
@@ -198,6 +198,7 @@
   <meta itemprop="url" content="https://www.amxinfinity.ml/products.html">
   <span itemprop="brand" itemscope itemtype="http://schema.org/Brand">
     <meta itemprop="name" content="AMX Infinity">
+    <meta itemprop="logo" content="https://www.amxinfinity.ml/img/amxinfinity_logo.png">
   </span>
 </div>
 
