Products MicroData - Brand Logo

--- a/products.html
+++ b/products.html
@@ -84,6 +84,7 @@
   <meta itemprop="url" content="https://www.amxinfinity.ml/products.html">
   <span itemprop="brand" itemscope itemtype="http://schema.org/Brand">
     <meta itemprop="name" content="AMX Infinity">
+    <meta itemprop="logo" content="https://www.amxinfinity.ml/img/amxinfinity_logo.png">
   </span>
 </div>
 
@@ -123,6 +124,7 @@
   <meta itemprop="url" content="https://www.amxinfinity.ml/products.html">
   <span itemprop="brand" itemscope itemtype="http://schema.org/Brand">
     <meta itemprop="name" content="AMX Infinity">
+    <meta itemprop="logo" content="https://www.amxinfinity.ml/img/amxinfinity_logo.png">
   </span>
 </div>
 
@@ -162,6 +164,7 @@
   <meta itemprop="url" content="https://www.amxinfinity.ml/products.html">
   <span itemprop="brand" itemscope itemtype="http://schema.org/Brand">
     <meta itemprop="name" content="AMX Infinity">
+    <meta itemprop="logo" content="https://www.amxinfinity.ml/img/amxinfinity_logo.png">
   </span>
 </div>
 
@@ -236,6 +239,7 @@
   <meta itemprop="url" content="https://www.amxinfinity.ml/products.html">
   <span itemprop="brand" itemscope itemtype="http://schema.org/Brand">
     <meta itemprop="name" content="AMX Infinity">
+    <meta itemprop="logo" content="https://www.amxinfinity.ml/img/amxinfinity_logo.png">
   </span>
 </div>
 
@@ -273,6 +277,7 @@
   <meta itemprop="url" content="https://www.amxinfinity.ml/products.html">
   <span itemprop="brand" itemscope itemtype="http://schema.org/Brand">
     <meta itemprop="name" content="AMX Infinity">
+    <meta itemprop="logo" content="https://www.amxinfinity.ml/img/amxinfinity_logo.png">
   </span>
 </div>
 
@@ -309,6 +314,7 @@
   <meta itemprop="url" content="https://www.amxinfinity.ml/products.html">
   <span itemprop="brand" itemscope itemtype="http://schema.org/Brand">
     <meta itemprop="name" content="AMX Infinity">
+    <meta itemprop="logo" content="https://www.amxinfinity.ml/img/amxinfinity_logo.png">
   </span>
 </div>
 
@@ -346,6 +352,7 @@
   <meta itemprop="url" content="https://www.amxinfinity.ml/products.html">
   <span itemprop="brand" itemscope itemtype="http://schema.org/Brand">
     <meta itemprop="name" content="AMX Infinity">
+    <meta itemprop="logo" content="https://www.amxinfinity.ml/img/amxinfinity_logo.png">
   </span>
 </div>
 
@@ -383,6 +390,7 @@
   <meta itemprop="url" content="https://www.amxinfinity.ml/products.html">
   <span itemprop="brand" itemscope itemtype="http://schema.org/Brand">
     <meta itemprop="name" content="AMX Infinity">
+    <meta itemprop="logo" content="https://www.amxinfinity.ml/img/amxinfinity_logo.png">
   </span>
 </div>
 
