Rows/Cols set to 1, Role removed from nav

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="container">
     <div class="header_box">
       <div class="logo"><a href="#"><img src="img/logo.png" alt="AMX Infinity"></a></div>
-	  <nav class="navbar navbar-inverse" role="navigation">
+	  <nav class="navbar navbar-inverse"><!-- role="navigation">-->
       <div class="navbar-header">
         <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
         </div>
@@ -447,7 +447,7 @@
             <form action="https://www.amxinfinity.tk/mail.php?ml" method="POST">
             <input class="input-text" type="text" name="name" required placeholder="Your Name *">
             <input class="input-text" type="text" name="email" required placeholder="Your E-mail *">
-            <textarea class="input-text text-area" cols="0" rows="0" name="message" required placeholder="Your Message *"></textarea>
+            <textarea class="input-text text-area" cols="1" rows="1" name="message" required placeholder="Your Message *"></textarea>
             <input class="input-btn" type="submit" value="send message">
             </form>
           </div>
