--- a/products.html
+++ b/products.html
@@ -23,7 +23,7 @@
   <div class="container">
     <div class="header_box">
       <div class="logo"><a href="#"><img src="img/logo.png" alt="AMX Infinity"></a></div>
-	  <nav class="navbar navbar-inverse" role="navigation">
+	  <nav class="navbar navbar-inverse">
       <div class="navbar-header">
         <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
         </div>
@@ -49,7 +49,7 @@
 
 <h2> Our Products </h2>
 
-<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product">
+<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product" id="Library-Management-System">
   <div class="container">
     <div class="inner_section">
 	<div class="row">
@@ -88,7 +88,7 @@
   </span>
 </div>
 
-<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product">
+<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product" id="Progress-Report-System">
   <div class="container">
     <div class="inner_section">
 	<div class="row">
@@ -128,7 +128,7 @@
   </span>
 </div>
 
-<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product">
+<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product" id="Public-Service-Monitoring-System">
   <div class="container">
     <div class="inner_section">
 	<div class="row">
@@ -168,7 +168,7 @@
   </span>
 </div>
 
-<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product">
+<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product" id="AMX-TextEdit">
   <div class="container">
     <div class="inner_section">
 	<div class="row">
@@ -205,7 +205,7 @@
   </span>
 </div>
 
-<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product">
+<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product" id="AMX-CryptoCoder">
   <div class="container">
     <div class="inner_section">
 	<div class="row">
@@ -243,7 +243,7 @@
   </span>
 </div>
 
-<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product">
+<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product" id="Live-HTML-Editor">
   <div class="container">
     <div class="inner_section">
 	<div class="row">
@@ -281,7 +281,7 @@
   </span>
 </div>
 
-<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product">
+<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product" id="Host-Editor">
   <div class="container">
     <div class="inner_section">
 	<div class="row">
@@ -318,7 +318,7 @@
   </span>
 </div>
 
-<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product">
+<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product" id="Statistical-Analysis">
   <div class="container">
     <div class="inner_section">
 	<div class="row">
@@ -356,7 +356,7 @@
   </span>
 </div>
 
-<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product">
+<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product" id="Statistical-Analysis-Android">
   <div class="container">
     <div class="inner_section">
 	<div class="row">
