Added product id links to name

--- a/products.html
+++ b/products.html
@@ -56,7 +56,10 @@
       <div class=" col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-right"><img itemprop="image" src="img/portfolio/libmansys.jpg" class="delay-03s animated wow zoomIn" alt=""></div>
       	<div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-left">
         	<div class=" delay-01s animated fadeInDown wow animated">
-			<h3><strong itemprop="name">Library Management System</strong></h3><br/> 
+			<a itemprop="url" href="https://www.amxinfinity.ml/products.html#Library-Management-System">
+                <h3><strong itemprop="name">Library Management System</strong></h3>
+            </a>
+            <br/> 
             <span itemprop="description">
             <p>
                 <strong>AMX Library Management System</strong> is an online/offline library management system designed particularly  
@@ -95,7 +98,10 @@
       <div class=" col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-left"><img itemprop="image" src="img/portfolio/prs.jpg" class="delay-03s animated wow zoomIn" alt=""></div>
       	<div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-right">
         	<div class=" delay-01s animated fadeInDown wow animated">
-			<h3><strong itemprop="name">Progress Report System</strong></h3><br/> 
+			<a itemprop="url" href="https://www.amxinfinity.ml/products.html#Progress-Report-System">
+                <h3><strong itemprop="name">Progress Report System</strong></h3>
+            </a>
+            <br/> 
             <span itemprop="description">
             <p>
                 <strong>AMX Progress Report System</strong> is an online monitoring system designed particularly  
@@ -128,14 +134,17 @@
   </span>
 </div>
 
-<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product" id="Public-Service-Monitoring-System">
+<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product" id="Public-Services-Monitoring-System">
   <div class="container">
     <div class="inner_section">
 	<div class="row">
       <div class=" col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-right"><img itemprop="image" src="img/portfolio/psga.jpg" class="delay-03s animated wow zoomIn" alt=""></div>
       	<div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-left">
         	<div class=" delay-01s animated fadeInDown wow animated">
-			<h3><strong itemprop="name">Public Services Monitoring System</strong></h3><br/> 
+			<a itemprop="url" href="https://www.amxinfinity.ml/products.html#Public-Services-Monitoring-System">
+                <h3><strong itemprop="name">Public Services Monitoring System</strong></h3>
+            </a>
+            <br/> 
             <span itemprop="description">
             <p>
                 <strong>AMX Public Services Monitoring System</strong> is an online monitoring and management system designed to ensure
@@ -175,7 +184,10 @@
       <div class=" col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-left"><img itemprop="image" src="img/portfolio/AMX-TextEdit.jpg" class="delay-03s animated wow zoomIn" alt=""></div>
       	<div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-right">
         	<div class=" delay-01s animated fadeInDown wow animated">
-			<h3><strong itemprop="name">AMX TextEdit</strong></h3><br/> 
+			<a itemprop="url" href="https://www.amxinfinity.ml/products.html#AMX-TextEdit">
+                <h3><strong itemprop="name">AMX TextEdit</strong></h3>
+            </a>
+            <br/> 
             <span itemprop="description">
             <p>
                 <strong>AMX TextEdit</strong> is an extremely fast and robust Windows application for editing text/source files!<br>
@@ -212,7 +224,10 @@
       <div class=" col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-right"><img itemprop="image" src="img/portfolio/AMX-CryptoCoder.jpg" class="delay-03s animated wow zoomIn" alt=""></div>
       	<div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-left">
         	<div class=" delay-01s animated fadeInDown wow animated">
-			<h3><strong itemprop="name">AMX CryptoCoder</strong></h3><br/> 
+			<a itemprop="url" href="https://www.amxinfinity.ml/products.html#AMX-CryptoCoder">
+                <h3><strong itemprop="name">AMX CryptoCoder</strong></h3>
+            </a>
+            <br/> 
             <span itemprop="description">
             <p>
                 <strong>AMX CryptoCoder</strong> is a Windows application for cryptography and hashing.<br>
@@ -250,7 +265,10 @@
       <div class=" col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-left"><img itemprop="image" src="img/portfolio/Live-HTML-Editor.jpg" class="delay-03s animated wow zoomIn" alt=""></div>
       	<div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-right">
         	<div class=" delay-01s animated fadeInDown wow animated">
-			<h3><strong itemprop="name">Live HTML Editor</strong></h3><br/> 
+			<a itemprop="url" href="https://www.amxinfinity.ml/products.html#Live-HTML-Editor">
+                <h3><strong itemprop="name">Live HTML Editor</strong></h3>
+            </a>
+            <br/> 
             <span itemprop="description">
             <p>
                 <strong>AMX Live HTML Editor</strong> is a Windows application for editing HTML files while seeing the result live!<br>
@@ -288,7 +306,10 @@
       <div class=" col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-right"><img itemprop="image" src="img/portfolio/Host-Editor.jpg" class="delay-03s animated wow zoomIn" alt=""></div>
       	<div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-left">
         	<div class=" delay-01s animated fadeInDown wow animated">
-			<h3><strong itemprop="name">Host Editor</strong></h3><br/> 
+			<a itemprop="url" href="https://www.amxinfinity.ml/products.html#Host-Editor">
+                <h3><strong itemprop="name">Host Editor</strong></h3>
+            </a>
+            <br/> 
             <span itemprop="description">
             <p>
                 <strong>AMX Host Editor</strong> is a Windows application to assign custom IP addresses to any domains 
@@ -325,7 +346,10 @@
       <div class=" col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-left"><img itemprop="image" src="img/portfolio/Statistical-Analysis.jpg" class="delay-03s animated wow zoomIn" alt=""></div>
       	<div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-right">
         	<div class=" delay-01s animated fadeInDown wow animated">
-			<h3><strong itemprop="name">Statistical Analysis</strong></h3><br/> 
+			<a itemprop="url" href="https://www.amxinfinity.ml/products.html#Statistical-Analysis">
+                <h3><strong itemprop="name">Statistical Analysis</strong></h3>
+            </a>
+            <br/> 
             <span itemprop="description">
             <p>
                 <strong>AMX Statistical Analysis</strong> is a Windows application for quickly doing statistical calculations for
@@ -363,7 +387,10 @@
       <div class=" col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-right"><img itemprop="image" src="img/portfolio/saa.png" class="delay-03s animated wow zoomIn" alt=""></div>
       	<div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-left">
         	<div class=" delay-01s animated fadeInDown wow animated">
-			<h3><strong itemprop="name">Statistical Analysis Android</strong></h3><br/> 
+			<a itemprop="url" href="https://www.amxinfinity.ml/products.html#Statistical-Analysis-Android">
+                <h3><strong itemprop="name">Statistical Analysis Android</strong></h3>
+            </a>
+            <br/> 
             <span itemprop="description">
             <p>
                 <strong>AMX Statistical Analysis Android</strong> is an android application for quickly doing statistical calculations for
