Contact Form -> AJAX

--- a/index.html
+++ b/index.html
@@ -440,9 +440,10 @@
           </ul>
         </div>
         <div class="col-lg-8 wow fadeInLeft delay-06s">
-          <div class="form">
+          <div class="form" id="ContactForm">
             <p id="successMsg" style="display: none; font-size: 18px; color: white; padding: 5px 0 5px 20px; background-color: green;">Successfully sent the message!</p>
             <p id="errorMsg" style="display: none; font-size: 18px; color: white; padding: 5px 0 5px 20px; background-color: red;">An error occured, please try again!</p>
+            <p id="waitMsg" style="display: none; font-size: 18px; color: white; padding: 5px 0 5px 20px; background-color: grey;">Sending the message, please wait!</p>
             <br>
             <form action="https://www.amxinfinity.tk/mail.php?ml" method="POST">
             <input class="input-text" type="text" name="name" required placeholder="Your Name *">
