Added AMX QR Suite

--- a/index.html
+++ b/index.html
@@ -258,6 +258,17 @@
       
       <!-- Portfolio Item -->
       <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(0px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  software isotope-item">
+        <div class="portfolio_img"> <img src="img/portfolio/AMX-QR-Suite.png" alt="AMX QR Suite"> </div>
+        <div class="item_overlay">
+          <div class="item_info"> 
+            <h4 class="project_name">AMX QR Suite</h4>
+          </div>
+        </div>
+      </div>
+      <!--/Portfolio Item -->
+      
+      <!-- Portfolio Item -->
+      <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(0px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  software isotope-item">
         <div class="portfolio_img"> <img src="img/portfolio/AMX-TextEdit.jpg" alt="AMX TextEdit"> </div>
         <div class="item_overlay">
           <div class="item_info"> 
