--- a/products.html
+++ b/products.html
@@ -177,6 +177,46 @@
   </span>
 </div>
 
+<div class="inner_wrapper" itemscope itemtype="http://schema.org/Product" id="AMX-QR-Suite">
+  <div class="container">
+    <div class="inner_section">
+	<div class="row">
+      <div class=" col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-right"><img itemprop="image" src="img/portfolio/AMX-QR-Suite.png" class="delay-03s animated wow zoomIn" alt=""></div>
+      	<div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-left">
+        	<div class=" delay-01s animated fadeInDown wow animated">
+			<a itemprop="url" href="https://www.amxinfinity.ml/products.html#AMX-QR-Suite">
+                <h3><strong itemprop="name">AMX QR Suite</strong></h3>
+            </a>
+            <br/> 
+            <span itemprop="description">
+            <p>
+                <strong>AMX QR Suite</strong> is a Windows application for reading (scanning from any camera device) and generating QR Codes.<br>
+                <strong>Features:</strong>
+                <ul>
+                    <li>Read all types of QR Codes</li>
+                    <li>Read almost all types of Barcodes</li>
+                    <li>Generate QR Codes</li>
+                    <li>No special equipment needed</li>
+                    <li>and much more...</li>
+                </ul>
+            </p>
+            </span>
+        </div>
+        <div class="work_bottom"> For a price quote or more information write to us at <span>info@amxinfinity.ml</span></div>       
+	   </div>
+      	
+      </div>
+	  
+      
+    </div>
+  </div> 
+  <meta itemprop="url" content="https://www.amxinfinity.ml/products.html">
+  <span itemprop="brand" itemscope itemtype="http://schema.org/Brand">
+    <meta itemprop="name" content="AMX Infinity">
+    <meta itemprop="logo" content="https://www.amxinfinity.ml/img/amxinfinity_logo.png">
+  </span>
+</div>
+
 <div class="inner_wrapper" itemscope itemtype="http://schema.org/Product" id="AMX-TextEdit">
   <div class="container">
     <div class="inner_section">
