--- a/index.html
+++ b/index.html
@@ -425,12 +425,12 @@
                                     Baramulla, Kashmir
                                 </p>
                             </div>
-                            <div class="detail">
+                            <!--<div class="detail">
                                 <h4>Call us on</h4>
                                 <p>
                                     <i class="fa fa-phone"></i>&nbsp; +91 9596041824
                                 </p>
-                            </div>
+                            </div>-->
                             <div class="detail">
                                 <h4>Email us at</h4>
                                 <p>
